# marcos

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
core/: Cargo.toml
core/src/: errctx.rs  lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/attributes/: codegen.rs  mod.rs  parse.rs
marcos/: Cargo.toml
marcos/src/: lib.rs
marcos/tests/: ui.rs
marcos/tests/ui/: fail_both_modes.rs  fail_both_modes.stderr  fail_missing_mode.rs  fail_missing_mode.stderr  fail_on_enum.rs  fail_on_enum.stderr  fail_tuple_struct.rs  fail_tuple_struct.stderr  pass_bare_path.rs  pass_basic_path.rs  pass_bool_and_int.rs  pass_custom_parser.rs  pass_intersection.rs  pass_meta_override.rs  pass_nested_meta.rs  pass_required_field.rs  pass_vec.rs
