[workspace]
resolver = "3"
members = [
    "core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "Derive macro for parsing derive macro attributes flexibly and easily"
repository = "https://github.com/seq-rs/marcos"
license = "MIT"
keywords = ["attribute", "derive", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
